--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@react-google-maps/api": "^2.17.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "google-map-react": "^2.2.0",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
