--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@next/font": "13.1.1",
     "@react-google-maps/api": "^2.17.1",
+    "@sanity/cli": "^3.2.4",
+    "@sanity/vision": "^3.0.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
@@ -18,13 +20,17 @@
     "eslint-config-next": "13.1.1",
     "google-map-react": "^2.2.0",
     "next": "13.1.1",
+    "next-sanity": "^4.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "sanity": "^3.0.0",
+    "styled-components": "^5.2.0",
     "swiper": "^8.4.6",
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@sanity/eslint-config-studio": "^2.0.1",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4"
