--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "formik": "^2.2.9",
     "google-map-react": "^2.2.0",
     "next": "13.1.1",
     "next-sanity": "^4.1.0",
